--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,16 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-
 /* base styles */
 * {
   margin: 0;
-  font-family: "Quicksand";
+  font-family: fantasy;
   color: #333;
 }
 .navbar {
   padding: 20px;
   display: flex;
   align-items: center;
-  max-width: 600px;
+  max-width: 1000px;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
